test/TestSuite/Syntax/Errors/export_bad_extn.tjp
project test "Test" "1.0" 2007-08-19 +2m 

task t "T" {
  start 2007-08-19
}

# MARK: error 8 export_bad_extn 
export "report.foo"

